bot_error.log
2026-07-02 13:53:06,163 - ERROR - ADB Connection Error:
Traceback (most recent call last):
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\connection.py", line 36, in connect
    self.socket.connect((self.host, self.port))
ConnectionRefusedError: [WinError 10061] No connection could be made because the target machine actively refused it

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "G:\hart\me\CookieRun_Bot\main.py", line 57, in connect_adb
    client.remote_connect("127.0.0.1", 7555)
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\command\host\__init__.py", line 83, in remote_connect
    result = self._execute_cmd(cmd)
             ^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\command\host\__init__.py", line 13, in _execute_cmd
    with self.create_connection() as conn:
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\client.py", line 14, in create_connection
    conn.connect()
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\connection.py", line 39, in connect
    raise RuntimeError("ERROR: connecting to {}:{} {}.\nIs adb running on your computer?".format(
RuntimeError: ERROR: connecting to 127.0.0.1:5037 [WinError 10061] No connection could be made because the target machine actively refused it.
Is adb running on your computer?

2026-07-02 13:55:13,926 - ERROR - ADB Connection Error:
Traceback (most recent call last):
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\connection.py", line 36, in connect
    self.socket.connect((self.host, self.port))
ConnectionRefusedError: [WinError 10061] No connection could be made because the target machine actively refused it

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "G:\hart\me\CookieRun_Bot\main.py", line 57, in connect_adb
    client.remote_connect("127.0.0.1", 7555)
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\command\host\__init__.py", line 83, in remote_connect
    result = self._execute_cmd(cmd)
             ^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\command\host\__init__.py", line 13, in _execute_cmd
    with self.create_connection() as conn:
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\client.py", line 14, in create_connection
    conn.connect()
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\connection.py", line 39, in connect
    raise RuntimeError("ERROR: connecting to {}:{} {}.\nIs adb running on your computer?".format(
RuntimeError: ERROR: connecting to 127.0.0.1:5037 [WinError 10061] No connection could be made because the target machine actively refused it.
Is adb running on your computer?

2026-07-02 13:59:17,346 - ERROR - ADB Connection Error:
Traceback (most recent call last):
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\connection.py", line 36, in connect
    self.socket.connect((self.host, self.port))
ConnectionRefusedError: [WinError 10061] No connection could be made because the target machine actively refused it

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "G:\hart\me\CookieRun_Bot\main.py", line 57, in connect_adb
    client.remote_connect("127.0.0.1", 7555)
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\command\host\__init__.py", line 83, in remote_connect
    result = self._execute_cmd(cmd)
             ^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\command\host\__init__.py", line 13, in _execute_cmd
    with self.create_connection() as conn:
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\client.py", line 14, in create_connection
    conn.connect()
  File "C:\Users\KPRU_IT\AppData\Local\Programs\Python\Python312\Lib\site-packages\ppadb\connection.py", line 39, in connect
    raise RuntimeError("ERROR: connecting to {}:{} {}.\nIs adb running on your computer?".format(
RuntimeError: ERROR: connecting to 127.0.0.1:5037 [WinError 10061] No connection could be made because the target machine actively refused it.
Is adb running on your computer?

2026-07-02 14:40:53,660 - ERROR - Traceback (most recent call last):
  File "G:\hart\me\CookieRun_Bot\main.py", line 306, in test_find
    max_val, pos = self.do_template_match()
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\hart\me\CookieRun_Bot\main.py", line 295, in do_template_match
    result = cv2.matchTemplate(screen_img, template_img, cv2.TM_CCOEFF_NORMED)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(5.0.0) D:\a\opencv-python\opencv-python\opencv\modules\imgproc\src\templmatch.cpp:1168: error: (-215:Assertion failed) (depth == CV_8U || depth == CV_32F) && type == _templ.type() && _img.dims() <= 2 in function 'cv::matchTemplate'


2026-07-02 14:41:05,200 - ERROR - Traceback (most recent call last):
  File "G:\hart\me\CookieRun_Bot\main.py", line 319, in find_and_click
    max_val, pos = self.do_template_match()
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\hart\me\CookieRun_Bot\main.py", line 295, in do_template_match
    result = cv2.matchTemplate(screen_img, template_img, cv2.TM_CCOEFF_NORMED)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(5.0.0) D:\a\opencv-python\opencv-python\opencv\modules\imgproc\src\templmatch.cpp:1168: error: (-215:Assertion failed) (depth == CV_8U || depth == CV_32F) && type == _templ.type() && _img.dims() <= 2 in function 'cv::matchTemplate'


2026-07-02 15:33:30,304 - ERROR - Unhandled exception: 
Traceback (most recent call last):
  File "G:\hart\me\CookieRun_Bot\main.py", line 622, in <module>
    app = CookieRunBotUI(root)
          ^^^^^^^^^^^^^^^^^^^^
  File "G:\hart\me\CookieRun_Bot\main.py", line 153, in __init__
    self.setup_macro_tab()
  File "G:\hart\me\CookieRun_Bot\main.py", line 185, in setup_macro_tab
    f_add = tk.Frame(self3.tab_macro)
                     ^^^^^
NameError: name 'self3' is not defined. Did you mean: 'self'?

2026-07-03 09:04:24,318 - ERROR - Macro Thread Error: Traceback (most recent call last):
  File "C:\Users\Hart\Desktop\New folder (2)\CookieRun_Bot\main.py", line 1312, in macro_worker
    self.log_bot_activity(f"Macro: \u0e15\u0e23\u0e27\u0e08\u0e1e\u0e1a\u0e20\u0e32\u0e1e '{sn}' (\u0e04\u0e33\u0e2a\u0e31\u0e48\u0e07 [Break]) \u0e2a\u0e31\u0e48\u0e07\u0e2b\u0e22\u0e38\u0e14\u0e21\u0e32\u0e42\u0e04\u0e23\u0e41\u0e25\u0e30\u0e08\u0e1a\u0e01\u0e32\u0e23\u0e17\u0e33\u0e07\u0e32\u0e19")
                                               ^^
NameError: name 'sn' is not defined

2026-07-03 09:30:18,441 - ERROR - Macro Thread Error: Traceback (most recent call last):
  File "C:\Users\Hart\Desktop\New folder (2)\CookieRun_Bot\main.py", line 1666, in macro_worker
    self.log_bot_activity(f"Macro: \u0e15\u0e23\u0e27\u0e08\u0e1e\u0e1a\u0e20\u0e32\u0e1e '{sn}' (\u0e04\u0e33\u0e2a\u0e31\u0e48\u0e07 [Break]) \u0e2a\u0e31\u0e48\u0e07\u0e2b\u0e22\u0e38\u0e14\u0e21\u0e32\u0e42\u0e04\u0e23\u0e41\u0e25\u0e30\u0e08\u0e1a\u0e01\u0e32\u0e23\u0e17\u0e33\u0e07\u0e32\u0e19")
                                               ^^
NameError: name 'sn' is not defined

2026-07-03 09:43:47,760 - ERROR - Macro Thread Error: Traceback (most recent call last):
  File "C:\Users\Hart\Desktop\New folder (2)\CookieRun_Bot\main.py", line 1666, in macro_worker
    self.log_bot_activity(f"Macro: \u0e15\u0e23\u0e27\u0e08\u0e1e\u0e1a\u0e20\u0e32\u0e1e '{sn}' (\u0e04\u0e33\u0e2a\u0e31\u0e48\u0e07 [Break]) \u0e2a\u0e31\u0e48\u0e07\u0e2b\u0e22\u0e38\u0e14\u0e21\u0e32\u0e42\u0e04\u0e23\u0e41\u0e25\u0e30\u0e08\u0e1a\u0e01\u0e32\u0e23\u0e17\u0e33\u0e07\u0e32\u0e19")
                                               ^^
NameError: name 'sn' is not defined

